# sendgrid-hs

./: .gitignore  CHANGELOG.md  README.md  cabal.sandbox.config  sendgrid-haskell.cabal
.factory/: AGENTS.md  JOURNAL.md  STANDARDS.md
.factory/WORKFLOWS/: maintenance.md  standards-check.md
.github/workflows/: ci.yml
.stack-work/install/x86_64-osx/lts-2.13/7.8.4/flag-cache/: http-conduit-2.1.5-f5e1ac54ff1fc1b263f289b077db3011  sendgrid-haskell-1.0-4a7b21cfc963d778b895d0c7298028f4
.stack-work/install/x86_64-osx/lts-2.13/7.8.4/lib/x86_64-osx-ghc-7.8.4/sendgrid-haskell-1.0/: libHSsendgrid-haskell-1.0-ghc7.8.4.dylib
.stack-work/install/x86_64-osx/lts-2.13/7.8.4/lib/x86_64-osx-ghc-7.8.4/sendgrid-haskell-1.0/Network/Sendgrid/: Api.dyn_hi  Api.hi  Utils.dyn_hi  Utils.hi
.stack-work/install/x86_64-osx/lts-2.13/7.8.4/pkgdb/: package.cache  sendgrid-haskell-1.0-4a7b21cfc963d778b895d0c7298028f4.conf
docs/: releasing.md
src/: Main.hs
src/Network/Sendgrid/: .#Api.hs  Api.hs  Utils.hs
tests/: Spec.hs
