cabal-version:      3.0
name:               sendgrid-haskell
version:            3.0.0.0
synopsis:           SendGrid v3 Mail Send client for Haskell
description:
  A small typed Haskell client for SendGrid v3 Mail Send.
  It builds JSON requests for /v3/mail/send and sends them with Bearer token authentication.
homepage:           https://github.com/owainlewis/sendgrid-hs
bug-reports:        https://github.com/owainlewis/sendgrid-hs/issues
license:            MIT
license-file:       LICENSE
author:             Owain Lewis
maintainer:         owain@owainlewis.com
category:           Web
build-type:         Simple
extra-source-files:
  README.md

extra-doc-files:
  CHANGELOG.md
  docs/releasing.md

source-repository head
  type:     git
  location: https://github.com/owainlewis/sendgrid-hs

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Widentities
    -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Network.Sendgrid.Api
  hs-source-dirs:   src
  default-language: Haskell2010
  other-extensions:
    OverloadedStrings
  build-depends:
    base >=4.14 && <5,
    aeson >=2.0 && <3,
    bytestring >=0.10 && <0.13,
    case-insensitive >=1.2 && <1.3,
    containers >=0.6 && <0.8,
    http-client >=0.7 && <0.8,
    http-client-tls >=0.3 && <0.4,
    http-types >=0.12 && <0.13,
    text >=1.2 && <2.2

test-suite sendgrid-haskell-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  other-extensions:
    OverloadedStrings
  build-depends:
    base >=4.14 && <5,
    aeson >=2.0 && <3,
    bytestring >=0.10 && <0.13,
    case-insensitive >=1.2 && <1.3,
    containers >=0.6 && <0.8,
    hspec >=2.10 && <2.12,
    http-client >=0.7 && <0.8,
    http-types >=0.12 && <0.13,
    sendgrid-haskell,
    text >=1.2 && <2.2
